tags/build-2008-02-20/src/dl-learner/org/dllearner/parser/ConfParser.java
/* Generated By:JavaCC: Do not edit this line. ConfParser.java */
package org.dllearner.parser;

import java.util.HashMap;
import java.util.List;
import java.util.LinkedList;
import java.util.Map;
import java.util.TreeMap;
import java.util.Set;
import java.util.HashSet;
import java.util.SortedSet;
import java.util.TreeSet;

import java.io.File;
import java.io.FileInputStream;
import java.io.FileNotFoundException;
import java.io.IOException;
import java.io.StringReader;

import org.dllearner.Info;

import org.dllearner.cli.*;
import org.dllearner.utilities.*;

public @SuppressWarnings("all") class ConfParser implements ConfParserConstants {

        // examples
        private SortedSet<String> positiveExamples = new TreeSet<String>();
        private SortedSet<String> negativeExamples = new TreeSet<String>();

        // conf file options
        private List<ConfFileOption> confOptions = new LinkedList<ConfFileOption>();
        private Map<String,ConfFileOption> confOptionsByName = new HashMap<String,ConfFileOption>();
        private Map<String,List<ConfFileOption>> confOptionsByPrefix = new HashMap<String,List<ConfFileOption>>();

        // Funktionsaufrufe (die gleiche Funktion darf mehrmals mit unterschiedlichen
        // Argumenten aufgerufen werden)
        // private static Map<String,Set<String>> functionCallsAlt = new TreeMap<String,Set<String>>();
        // jeder Funktionsaufruf hat eine Liste von n Argumenten; alle Funktionsaufrufe
        // werden in einer Liste gespeichert
        // private List<List<String>> functionCalls = new LinkedList<List<String>>();
        // => irgendwie Funktionsname + Argumente speichern
        // => d.h. man bräuchte für jede Funktion so eine Liste oder das erste Element
        // der Liste ist der Funktionsname <= ist noch die praktikabelste Variante

        private Map<String,List<List<String>>> functionCalls = new HashMap<String,List<List<String>>>();

        private void addFunctionCall(String name, List<String> arguments) {
                if(functionCalls.containsKey(name))
                        functionCalls.get(name).add(arguments);
                else {
                        List<List<String>> calls = new LinkedList<List<String>>();
                        calls.add(arguments);
                        functionCalls.put(name,calls);
                }
        }

        private void addConfOption(ConfFileOption confOption) {
                confOptions.add(confOption);
                confOptionsByName.put(confOption.getFullName(), confOption);
                String prefix = confOption.getOption();
                if(confOptionsByPrefix.containsKey(prefix))
                        confOptionsByPrefix.get(prefix).add(confOption);
                else {
                        LinkedList<ConfFileOption> optionList = new LinkedList<ConfFileOption>();
                        optionList.add(confOption);
                        confOptionsByPrefix.put(prefix,optionList);
                }
        }

        public SortedSet<String> getPositiveExamples() {
                return positiveExamples;
        }

        public SortedSet<String> getNegativeExamples() {
                return negativeExamples;
        }

        public List<ConfFileOption> getConfOptions() {
                return confOptions;
        }

        public Map<String,ConfFileOption> getConfOptionsByName() {
                return confOptionsByName;
        }

        public ConfFileOption getConfOptionsByName(String name) {
                return confOptionsByName.get(name);
        }

        public Map<String,List<ConfFileOption>> getConfOptionsByPrefix() {
                return confOptionsByPrefix;
        }

        public List<ConfFileOption> getConfOptionsByPrefix(String prefix) {
                return confOptionsByPrefix.get(prefix);
        }

        public Map<String,List<List<String>>> getFunctionCalls() {
                return functionCalls;
        }

        /*
	private static void addFunctionCall(String functionName, String argument) {
		if(functionCalls.containsKey(functionName)) {
			functionCalls.get(functionName).add(argument);
		} else {
			Set<String> newFunction = new TreeSet<String>();
			newFunction.add(argument);
			functionCalls.put(functionName,newFunction);
		}		
	}
	*/


        /*
	public static SimpleNode parseString(String str) throws ParseException {
		StringReader sr = new StringReader(str);
		DLLearner learner = new DLLearner(sr);
		SimpleNode n = learner.Start();
		return n;
	}
	*/

        public static ConfParser parseFile(File filename) {
                ConfParser learner = null;
                try {
                        learner = new ConfParser(new FileInputStream(filename));
                        learner.Start();
                } catch(FileNotFoundException e) {
                        e.printStackTrace();
                } catch(ParseException e) {
                        e.printStackTrace();
                }
                return learner;
        }

  public static void main(String args[]) {

    if(args.length==0) {
        System.out.println("Please specify an input file.");
        System.exit(0);
    }

    System.out.println("Starting DL-Learner (Build " + Info.build + ")");
        // System.out.println(args);

        // System.out.println(args[0]);
        // System.out.println(args[1]);
        // System.out.println(args.length);

    File f = new File(args[args.length-1]);
    String baseDir = "";

        System.out.print("Parsing " + f.getName() + " ... ");
    long parseStartTime = System.currentTimeMillis();

    // SimpleNode n = null;
    ConfParser learner = null;
    try {
        learner = new ConfParser(new FileInputStream(args[args.length-1]));
        baseDir = f.getParentFile().getPath();
    } catch(IOException e) {
        System.err.println(e);
        System.exit(0);
    }
    try {
      learner.Start();
      // n.dump("");
      // System.out.println("Thank you.");
    } catch (Exception e) {
      System.out.println("\nParse exception occurred. Please follow the advise given below.");
      System.out.println(e.getMessage());
      e.printStackTrace();
      System.exit(0);
    }

    long parseDuration = System.currentTimeMillis() - parseStartTime;
    System.out.println("OK (" + parseDuration + " ms)");

    boolean queryMode = false;
    // solution test mode wird nicht unbedingt gebraucht, da man die covers
    // gleich standardmäßig beim query mit anzeigen kann
    // boolean solutionTestMode = false;

    if(args.length>1 && args[0].equals("-q"))
        queryMode = true;

    //if(args.length>1 && args[0].equals("-qt")) {
    //	queryMode = true;
    //	solutionTestMode = true;
    //}

    // new Main(n, baseDir, queryMode);
    // Parser erstmal Standalone testen
    // n.dump("");

    // neuer Aufruf des Hauptprogramms
    // TODO: remove (in the future, the parser will be called from whatever method
    // needs it, instead of starting the learning process itself)
    // new Main(kb,positiveExamples,negativeExamples,confOptions,functionCalls,baseDir,queryMode);
  }

  final public void Start() throws ParseException {
        ConfFileOption confOption;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case POS_EX:
      case NEG_EX:
      case ID:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      if (jj_2_1(2147483647)) {
        confOption = ConfOption();
                    addConfOption(confOption);
      } else if (jj_2_2(2147483647)) {
        FunctionCall();
      } else if (jj_2_3(2147483647)) {
        PosExample();
      } else if (jj_2_4(2147483647)) {
        NegExample();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(0);
  }

  final public ConfFileOption ConfOption() throws ParseException {
        boolean containsSubOption=false, isNumeric=false, isDouble=false, isSet=false, isList=false;
        String option="", subOption="", value="", tmp="", tmp2="";
        int number = 0;
        double numberDouble = 0;
        ConfFileOption confOption;
        Set<String> values = new HashSet<String>();
        List<StringTuple> tuples = new LinkedList<StringTuple>();
    option = Id();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMAND_END:
      jj_consume_token(COMMAND_END);
      subOption = Id();
                                    containsSubOption=true;
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(25);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      value = Id();
      break;
    case STRING:
      value = String();
      break;
    case NUMBER:
      number = Integer();
                             isNumeric=true;
      break;
    case DOUBLE:
      numberDouble = Double();
                                  isNumeric=true; isDouble=true;
      break;
    default:
      jj_la1[8] = jj_gen;
      if (jj_2_7(2147483647)) {
        jj_consume_token(26);
        jj_consume_token(31);
                                       isSet=true;
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 26:
          jj_consume_token(26);
          label_2:
          while (true) {
            if (jj_2_5(2)) {
              ;
            } else {
              break label_2;
            }
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case STRING:
              tmp = String();
              break;
            case ID:
              tmp = Id();
              break;
            default:
              jj_la1[2] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
                                                           values.add(tmp);
            jj_consume_token(29);
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case STRING:
            tmp = String();
            break;
          case ID:
            tmp = Id();
            break;
          default:
            jj_la1[3] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
                                      values.add(tmp);
          jj_consume_token(31);
                                                             isSet=true;
          break;
        default:
          jj_la1[9] = jj_gen;
          if (jj_2_8(2147483647)) {
            jj_consume_token(27);
            jj_consume_token(32);
                                       isList=true;
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case 27:
              jj_consume_token(27);
              label_3:
              while (true) {
                if (jj_2_6(6)) {
                  ;
                } else {
                  break label_3;
                }
                jj_consume_token(28);
                switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                case STRING:
                  tmp = String();
                  break;
                case ID:
                  tmp = Id();
                  break;
                default:
                  jj_la1[4] = jj_gen;
                  jj_consume_token(-1);
                  throw new ParseException();
                }
                jj_consume_token(29);
                switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                case STRING:
                  tmp2 = String();
                  break;
                case ID:
                  tmp2 = Id();
                  break;
                default:
                  jj_la1[5] = jj_gen;
                  jj_consume_token(-1);
                  throw new ParseException();
                }
                jj_consume_token(30);
            tuples.add(new StringTuple(tmp,tmp2));
                jj_consume_token(29);
              }
              jj_consume_token(28);
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case STRING:
                tmp = String();
                break;
              case ID:
                tmp = Id();
                break;
              default:
                jj_la1[6] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
              jj_consume_token(29);
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case STRING:
                tmp2 = String();
                break;
              case ID:
                tmp2 = Id();
                break;
              default:
                jj_la1[7] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
              jj_consume_token(30);
            tuples.add(new StringTuple(tmp,tmp2));
              jj_consume_token(32);
                isList=true;
              break;
            default:
              jj_la1[10] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      }
    }
    jj_consume_token(CONF_END);
        if(containsSubOption) {
                if(isNumeric)
                        if(isDouble)
                                confOption = new ConfFileOption(option,subOption,numberDouble);
                        else
                                confOption = new ConfFileOption(option,subOption,number);
                else
                        if(isSet)
                                confOption = new ConfFileOption(option,subOption,values);
                        else if(isList)
                                confOption = new ConfFileOption(option,subOption,tuples);
                        else
                                confOption = new ConfFileOption(option,subOption,value);
        } else {
                if(isNumeric)
                        if(isDouble)
                                confOption = new ConfFileOption(option,numberDouble);
                        else
                                confOption = new ConfFileOption(option,number);
                else
                        if(isSet)
                                confOption = new ConfFileOption(option,values);
                        else if(isList)
                                confOption = new ConfFileOption(option,tuples);
                        else
                                confOption = new ConfFileOption(option,value);
        }
        {if (true) return confOption;}
        // confOptions.add(confOption);

    throw new Error("Missing return statement in function");
  }

  final public void FunctionCall() throws ParseException {
        String s, s1, s2;
        List<String> list = new LinkedList<String>();
    s1 = Id();
    jj_consume_token(28);
    s2 = String();
                                  list.add(s2);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 29:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_4;
      }
      jj_consume_token(29);
      s = String();
                          list.add(s);
    }
    jj_consume_token(30);
    jj_consume_token(CONF_END);
          addFunctionCall(s1,list);
  }

  final public void PosExample() throws ParseException {
                      String i;
    jj_consume_token(POS_EX);
    i = Individual();
          positiveExamples.add(i);
  }

  final public void NegExample() throws ParseException {
                      String i;
    jj_consume_token(NEG_EX);
    i = Individual();
          negativeExamples.add(i);
  }

  final public String Individual() throws ParseException {
        String name;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      name = Id();
      break;
    case STRING:
      name = String();
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return KBParser.getInternalURI(name);}
    throw new Error("Missing return statement in function");
  }

  final public String Id() throws ParseException {
  Token t;
    t = jj_consume_token(ID);
    {if (true) return t.image;}
    throw new Error("Missing return statement in function");
  }

  final public double Double() throws ParseException {
  Token t;
    t = jj_consume_token(DOUBLE);
    {if (true) return new Double(t.image);}
    throw new Error("Missing return statement in function");
  }

  final public int Integer() throws ParseException {
  Token t;
    t = jj_consume_token(NUMBER);
    {if (true) return new Integer(t.image);}
    throw new Error("Missing return statement in function");
  }

  final public String String() throws ParseException {
  Token t;
  String s;
    t = jj_consume_token(STRING);
    // enclosing "" are removed
    s = t.image;
    s = s.substring(1, s.length() - 1);
    {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  final private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  final private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  final private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  final private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  final private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  final private boolean jj_3R_7() {
    if (jj_3R_5()) return true;
    return false;
  }

  final private boolean jj_3_7() {
    if (jj_scan_token(26)) return true;
    if (jj_scan_token(31)) return true;
    return false;
  }

  final private boolean jj_3R_12() {
    if (jj_scan_token(29)) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  final private boolean jj_3R_17() {
    if (jj_3R_11()) return true;
    return false;
  }

  final private boolean jj_3_6() {
    if (jj_scan_token(28)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_15()) {
    jj_scanpos = xsp;
    if (jj_3R_16()) return true;
    }
    if (jj_scan_token(29)) return true;
    xsp = jj_scanpos;
    if (jj_3R_17()) {
    jj_scanpos = xsp;
    if (jj_3R_18()) return true;
    }
    if (jj_scan_token(30)) return true;
    if (jj_scan_token(29)) return true;
    return false;
  }

  final private boolean jj_3_5() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_13()) {
    jj_scanpos = xsp;
    if (jj_3R_14()) return true;
    }
    if (jj_scan_token(29)) return true;
    return false;
  }

  final private boolean jj_3R_19() {
    if (jj_scan_token(NUMBER)) return true;
    return false;
  }

  final private boolean jj_3R_10() {
    if (jj_3R_11()) return true;
    return false;
  }

  final private boolean jj_3R_6() {
    if (jj_scan_token(COMMAND_END)) return true;
    if (jj_3R_5()) return true;
    return false;
  }

  final private boolean jj_3R_16() {
    if (jj_3R_5()) return true;
    return false;
  }

  final private boolean jj_3_4() {
    if (jj_scan_token(NEG_EX)) return true;
    return false;
  }

  final private boolean jj_3_3() {
    if (jj_scan_token(POS_EX)) return true;
    return false;
  }

  final private boolean jj_3R_20() {
    if (jj_scan_token(DOUBLE)) return true;
    return false;
  }

  final private boolean jj_3_2() {
    if (jj_3R_5()) return true;
    if (jj_scan_token(28)) return true;
    if (jj_3R_11()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_12()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(30)) return true;
    if (jj_scan_token(CONF_END)) return true;
    return false;
  }

  final private boolean jj_3R_14() {
    if (jj_3R_5()) return true;
    return false;
  }

  final private boolean jj_3_1() {
    if (jj_3R_5()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_6()) jj_scanpos = xsp;
    if (jj_scan_token(25)) return true;
    xsp = jj_scanpos;
    if (jj_3R_7()) {
    jj_scanpos = xsp;
    if (jj_3R_8()) {
    jj_scanpos = xsp;
    if (jj_3R_9()) {
    jj_scanpos = xsp;
    if (jj_3R_10()) {
    jj_scanpos = xsp;
    if (jj_scan_token(26)) {
    jj_scanpos = xsp;
    if (jj_scan_token(27)) return true;
    }
    }
    }
    }
    }
    return false;
  }

  final private boolean jj_3R_9() {
    if (jj_3R_20()) return true;
    return false;
  }

  final private boolean jj_3R_5() {
    if (jj_scan_token(ID)) return true;
    return false;
  }

  final private boolean jj_3R_15() {
    if (jj_3R_11()) return true;
    return false;
  }

  final private boolean jj_3R_18() {
    if (jj_3R_5()) return true;
    return false;
  }

  final private boolean jj_3R_13() {
    if (jj_3R_11()) return true;
    return false;
  }

  final private boolean jj_3R_8() {
    if (jj_3R_19()) return true;
    return false;
  }

  final private boolean jj_3R_11() {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  final private boolean jj_3_8() {
    if (jj_scan_token(27)) return true;
    if (jj_scan_token(32)) return true;
    return false;
  }

  public ConfParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  public Token token, jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  public boolean lookingAhead = false;
  private boolean jj_semLA;
  private int jj_gen;
  final private int[] jj_la1 = new int[13];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_0();
      jj_la1_1();
   }
   private static void jj_la1_0() {
      jj_la1_0 = new int[] {0x1c00,0x100,0x1001000,0x1001000,0x1001000,0x1001000,0x1001000,0x1001000,0x1007000,0x4000000,0x8000000,0x20000000,0x1001000,};
   }
   private static void jj_la1_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[8];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  public ConfParser(java.io.InputStream stream) {
     this(stream, null);
  }
  public ConfParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ConfParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 13; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
